src/objects/Consult_Room_Note__c.object
<CustomObject>
    <description>Table that holds notes for a consult room by date</description>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Text Comment that will display on the calendar for a given room on a day.</description>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consult_Room__c</fullName>
        <description>Room the note is tied to.</description>
        <label>Consult Room</label>
        <referenceTo>Consult_Rooms__c</referenceTo>
        <relationshipLabel>Consult Room Notes</relationshipLabel>
        <relationshipName>Consult_Room_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Note_Date__c</fullName>
        <description>The date this note applies to and will appear on the calendar display</description>
        <label>Note Date</label>
        <type>Date</type>
    </fields>
    <label>Consult Room Note</label>
    <nameField>
        <displayFormat>CN-{0}</displayFormat>
        <label>Consult Room Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consult Room Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>